[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/MainMenu/StartSpace.gd" type="Script" id=1]
[ext_resource path="res://scenes/MainMenu/ExitGame.gd" type="Script" id=2]
[ext_resource path="res://scenes/MainMenu/StartPlanet.gd" type="Script" id=3]
[ext_resource path="res://scenes/MainMenu/MainMenu.gd" type="Script" id=4]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.196078, 0.196078, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -252.5
margin_top = -93.5
margin_right = 252.5
margin_bottom = 93.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartSpace" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_right = 505.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
text = "Start Space"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
button_selected = false

[node name="StartPlanet" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 54.0
margin_right = 505.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 50 )
disabled = true
text = "Start Planet Test"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/VBoxContainer"]
margin_top = 108.0
margin_right = 505.0
margin_bottom = 133.0
rect_min_size = Vector2( 0, 25 )
color = Color( 0.196078, 0.196078, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitGame" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 137.0
margin_right = 505.0
margin_bottom = 187.0
rect_min_size = Vector2( 0, 50 )
text = "Exit Game"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/VBoxContainer/StartSpace" to="CanvasLayer/VBoxContainer/StartSpace" method="_on_StartSpace_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ExitGame" to="CanvasLayer/VBoxContainer/ExitGame" method="_on_ExitGame_pressed"]
